{
  "version": 4,
  "terraform_version": "1.3.2",
  "serial": 26,
  "lineage": "ed3846af-f433-efd7-639a-9c7475ffe85d",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:570454594995:network-acl/acl-0aee5431937710c09",
            "default_network_acl_id": "acl-0aee5431937710c09",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0aee5431937710c09",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "570454594995",
            "subnet_ids": [
              "subnet-0060c1e9e78de6861",
              "subnet-03f8331d22888ac9f",
              "subnet-0b28dd8ee836bb719",
              "subnet-0b30259d9bf008e9b",
              "subnet-0bd64550d3f3a711d",
              "subnet-0d7742ea71f8bfd5d"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "vpc-trustbank-default",
              "owner": "trustbank"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-trustbank-default",
              "owner": "trustbank"
            },
            "vpc_id": "vpc-0e3c09e8c358209b5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:570454594995:route-table/rtb-012d8d0d6680f0550",
            "default_route_table_id": "rtb-012d8d0d6680f0550",
            "id": "rtb-012d8d0d6680f0550",
            "owner_id": "570454594995",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "vpc-trustbank-default",
              "owner": "trustbank"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-trustbank-default",
              "owner": "trustbank"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0e3c09e8c358209b5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:570454594995:security-group/sg-07b7e38c6f9236d8e",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-07b7e38c6f9236d8e",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "570454594995",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "vpc-trustbank-default",
              "owner": "trustbank"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-trustbank-default",
              "owner": "trustbank"
            },
            "vpc_id": "vpc-0e3c09e8c358209b5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06908d7452d682e0e",
            "domain": "vpc",
            "id": "eipalloc-06908d7452d682e0e",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-228-168-204.compute-1.amazonaws.com",
            "public_ip": "3.228.168.204",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-trustbank-us-east-1a",
              "owner": "trustbank"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-trustbank-us-east-1a",
              "owner": "trustbank"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:570454594995:internet-gateway/igw-0a4309f8bfbb8c767",
            "id": "igw-0a4309f8bfbb8c767",
            "owner_id": "570454594995",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-trustbank",
              "owner": "trustbank"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-trustbank",
              "owner": "trustbank"
            },
            "vpc_id": "vpc-0e3c09e8c358209b5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06908d7452d682e0e",
            "association_id": "eipassoc-00a6dc3b2d9649ba5",
            "connectivity_type": "public",
            "id": "nat-0f4ac5b3f13998e9f",
            "network_interface_id": "eni-0c7358069bf03c5ff",
            "private_ip": "10.0.101.218",
            "public_ip": "3.228.168.204",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0bd64550d3f3a711d",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-trustbank-us-east-1a",
              "owner": "trustbank"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-trustbank-us-east-1a",
              "owner": "trustbank"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0fae3be6b045ab8d51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f4ac5b3f13998e9f",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fae3be6b045ab8d5",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a4309f8bfbb8c767",
            "id": "r-rtb-0e47a2f5536528c941080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e47a2f5536528c94",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:570454594995:route-table/rtb-07ea879a2421f4129",
            "id": "rtb-07ea879a2421f4129",
            "owner_id": "570454594995",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "vpc-trustbank-db",
              "owner": "trustbank"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-trustbank-db",
              "owner": "trustbank"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e3c09e8c358209b5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:570454594995:route-table/rtb-0fae3be6b045ab8d5",
            "id": "rtb-0fae3be6b045ab8d5",
            "owner_id": "570454594995",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "vpc-trustbank-private",
              "owner": "trustbank"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-trustbank-private",
              "owner": "trustbank"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e3c09e8c358209b5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:570454594995:route-table/rtb-0e47a2f5536528c94",
            "id": "rtb-0e47a2f5536528c94",
            "owner_id": "570454594995",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "vpc-trustbank-public",
              "owner": "trustbank"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-trustbank-public",
              "owner": "trustbank"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e3c09e8c358209b5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0686751641ab980b2",
            "route_table_id": "rtb-07ea879a2421f4129",
            "subnet_id": "subnet-0d7742ea71f8bfd5d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f5e42055b5470f74",
            "route_table_id": "rtb-07ea879a2421f4129",
            "subnet_id": "subnet-03f8331d22888ac9f"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d2e1bc74313a260b",
            "route_table_id": "rtb-0fae3be6b045ab8d5",
            "subnet_id": "subnet-0b30259d9bf008e9b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-003131acb4bc48b62",
            "route_table_id": "rtb-0fae3be6b045ab8d5",
            "subnet_id": "subnet-0060c1e9e78de6861"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09cbfe3d525f06acd",
            "route_table_id": "rtb-0e47a2f5536528c94",
            "subnet_id": "subnet-0bd64550d3f3a711d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01fa9c35c62517aae",
            "route_table_id": "rtb-0e47a2f5536528c94",
            "subnet_id": "subnet-0b28dd8ee836bb719"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:570454594995:subnet/subnet-0d7742ea71f8bfd5d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d7742ea71f8bfd5d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "570454594995",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-trustbank-db-us-east-1a",
              "owner": "trustbank",
              "type": "database_subnets"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-trustbank-db-us-east-1a",
              "owner": "trustbank",
              "type": "database_subnets"
            },
            "vpc_id": "vpc-0e3c09e8c358209b5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:570454594995:subnet/subnet-03f8331d22888ac9f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03f8331d22888ac9f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "570454594995",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-trustbank-db-us-east-1c",
              "owner": "trustbank",
              "type": "database_subnets"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-trustbank-db-us-east-1c",
              "owner": "trustbank",
              "type": "database_subnets"
            },
            "vpc_id": "vpc-0e3c09e8c358209b5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:570454594995:subnet/subnet-0b30259d9bf008e9b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b30259d9bf008e9b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "570454594995",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-trustbank-private-us-east-1a",
              "owner": "trustbank",
              "type": "private_subnets"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-trustbank-private-us-east-1a",
              "owner": "trustbank",
              "type": "private_subnets"
            },
            "vpc_id": "vpc-0e3c09e8c358209b5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:570454594995:subnet/subnet-0060c1e9e78de6861",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0060c1e9e78de6861",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "570454594995",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-trustbank-private-us-east-1c",
              "owner": "trustbank",
              "type": "private_subnets"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-trustbank-private-us-east-1c",
              "owner": "trustbank",
              "type": "private_subnets"
            },
            "vpc_id": "vpc-0e3c09e8c358209b5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:570454594995:subnet/subnet-0bd64550d3f3a711d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bd64550d3f3a711d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "570454594995",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-trustbank-public-us-east-1a",
              "owner": "trustbank",
              "type": "public_subnets"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-trustbank-public-us-east-1a",
              "owner": "trustbank",
              "type": "public_subnets"
            },
            "vpc_id": "vpc-0e3c09e8c358209b5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:570454594995:subnet/subnet-0b28dd8ee836bb719",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b28dd8ee836bb719",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "570454594995",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-trustbank-public-us-east-1c",
              "owner": "trustbank",
              "type": "public_subnets"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-trustbank-public-us-east-1c",
              "owner": "trustbank",
              "type": "public_subnets"
            },
            "vpc_id": "vpc-0e3c09e8c358209b5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:570454594995:vpc/vpc-0e3c09e8c358209b5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0aee5431937710c09",
            "default_route_table_id": "rtb-012d8d0d6680f0550",
            "default_security_group_id": "sg-07b7e38c6f9236d8e",
            "dhcp_options_id": "dopt-0cbed5de779014017",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e3c09e8c358209b5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-012d8d0d6680f0550",
            "owner_id": "570454594995",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-trusttank",
              "owner": "trustbank"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-trusttank",
              "owner": "trustbank"
            }
          }
        }
      ]
    }
  ]
}